# aiservx-claude-code-main

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  FULL_SYSTEM_AUDIT.md  FULL_SYSTEM_AUDIT_ADDENDUM.md  OPENROUTER_VALIDATION_REPORT.md  PROJECT_MEMORY.json  PROJECT_MEMORY.md  PROJECT_PLAN.md  README.md  README.zh-CN.md  package.json  test-plan-pr-n.md  tsconfig.json
.devin/: wiki.json
desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: ai.rs  autoinstall.rs  cancel.rs  codegen_envelope.rs  compiler_gate.rs  controller.rs  dependency_guard.rs  fs_ops.rs  lib.rs  memory.rs  project_scan.rs  run_cmd_gate.rs  runtime_validation.rs  security_gate.rs  settings.rs  tasks.rs  tools.rs  watcher.rs
desktop/src-tauri/src/schemas/: codegen_envelope.json
docs/: EVALUATION.md  SCENARIOS.md  USAGE.md
scripts/: build-exe.ts  build.ts  run-snapshot.ps1
src/: commands.ts  global.d.ts  main.tsx
src/assistant/: AssistantSessionChooser.tsx  gate.ts  index.ts  sessionDiscovery.ts
src/bridge/: peerSessions.ts  webhookSanitizer.ts
src/buddy/: CompanionSprite.tsx  prompt.ts  types.ts  useBuddyNotification.tsx
src/cli/: bg.ts  rollback.ts  up.ts
src/commands/: force-snip.ts  proactive.ts  subscribe-pr.ts  torch.ts
src/components/: AntModelSwitchCallout.tsx  UndercoverAutoCallout.tsx
src/constants/: querySource.ts
src/coordinator/: workerAgent.ts
src/daemon/: main.ts  workerRegistry.ts
src/entrypoints/: cli.tsx
src/ink/: cursor.ts  devtools.ts
src/jobs/: classifier.ts
src/keybindings/: types.ts
src/memdir/: memoryShapeTelemetry.ts
src/proactive/: index.ts  useProactive.ts
src/query/: transitions.ts
src/screens/: REPL.tsx
types/: bun-shims.d.ts
(+167 files in other folders)
