[package]
name = "open-claude-code-desktop"
version = "0.1.0"
description = "Open Claude Code Desktop - small AI IDE (hybrid OpenRouter + Ollama)"
authors = ["Open Claude Code"]
edition = "2021"

[lib]
name = "open_claude_code_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-claude-code-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "6.1"
notify-debouncer-full = "0.3"
walkdir = "2.5"
similar = "2.6"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"

# Subprocess-tree kill: on Unix we call `killpg(-pgid, SIGKILL)` through
# libc. On Windows we shell out to `taskkill /T /F /PID <pid>`, so no
# extra crate is needed there.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# `bytes` is already pulled transitively by reqwest; declared here so
# the ai::sse_cancel_tests module can import it directly. `tokio-stream`
# is in the main deps and already exposes `wrappers::ReceiverStream`
# via the `sync` feature (enabled by default).
bytes = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
